# devpulse

./: .bazelrc  .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile.toml  README.md  WORKSPACE.bazel  annotate.py  bazel-devpulse  bazel-testlogs  docker-compose.yml  nginx.conf
api/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Shuttle.toml  build.rs
api/auth/: tuples.yaml
api/proto/: commit_range_analysis.proto  config.yaml  developer_performance.proto  devpulse.proto  operational.proto  repository.proto  server.proto
api/proto/v1/: health.proto
api/src/: accept.rs  conversion.rs  errors.rs  main-old.rs  main.rs  mod.rs  models.rs  multiplex_service.rs  utils.rs
api/src/grpc/: mod.rs  server.rs
api/src/grpc/interceptor/: authorization.rs  jwt.rs
api/src/handlers/v1/: health.rs  mod.rs
api/src/http/: api_doc.rs  controllers.rs  language_model.rs  mod.rs  openapi.rs  routes.rs  stream_provider.rs
api/src/http/controllers/: chat.rs  chat_2.rs  docs.rs  health.rs  mod.rs  not_found.rs  openapi.rs  operational.rs  pull_request.rs  root.rs  version.rs
api/src/http/middleware/: auth.rs  authorize.rs  jwt.rs  mod.rs  rate_limiter.rs  response_format.rs
api/src/http/v1/: constants.rs  conversion.rs  mod.rs  openapi.rs
auth/: Cargo.toml  README.md
auth/src/: errors.rs  jwt.rs  lib.rs
auth/src/models/: claims.rs  keys.rs  mod.rs
auth/src/services/: grpc_service.rs
backend/: Cargo.toml
core/: BUILD.bazel  Cargo.toml  Makefile.toml  build.OLD  build.rs  build.txt
core/prompts/: conventional_commit.hbs  summarize_commit.hbs  summarize_git_diff.hbs  title_comment.hbs  translation.hbs
core/proto/: auth.proto  commit.proto  config.yaml
core/spec/: api.github.com.extracted.json  config.yml  dev.azure.com.extracted.json  discover.js  extract.js  extract_azure.js  extract_operations.js  package-lock.json
core/src/: git.rs  lib.rs
core/src/adapters/: mod.rs  to_core_commit_from_azure.rs  to_core_commit_from_github.rs
core/src/analyzers/: code_churn.rs  mod.rs  top_contributor.rs
core/src/clients/: github_client.rs  http.rs  mod.rs
core/src/clients/models/: access_token.rs  arc_client.rs  circuit_breaker.rs  mod.rs
core/src/commit/conventional/: emoji.rs  emoji_full.rs  mod.rs  template.rs
core/src/llm/: anotation.rs  base.rs  summarization.rs
core/src/llm/embedding/: design.md
core/src/models/: commit.rs  commit_author.rs  commit_commit.rs  commit_commit_tree.rs  commit_parents_inner.rs  commit_stats.rs  commit_status.rs  diff_entry.rs  git_user.rs  mod.rs  simple_user.rs  verification.rs
core/src/models/base/: comment.rs  commit.rs  contributor.rs  mod.rs  pull_request.rs  review.rs
core/src/models/github/: mod.rs  pull_request.rs
core/src/pull_request/: design.md  error.rs  mod.rs  models.rs  process.txt  service.rs
core/src/repository/: mod.rs
core/src/services/: analyze_commit_range.rs  azure_service.rs  git_service.rs  github_service.rs  mod.rs
core/src/utils/: git.rs  mod.rs
core/templates/rust-templates/reqwest/: api_mod.mustache  configuration.mustache
core/tests/: test_basic.rs
notes/: Cargo.toml  errors_in_rust.md  useful_libraries_in_rust.md
notes/docs/: downcasting_in_rust.md  grpc.md  specs.md  useful_libraries_in_rust.md
notes/docs/architecture/: basic-architecture.md
notes/docs/errors_handling_in_rust/: 3_thiserror_vs_snafu_structuring.md
notes/docs/github/: github_actions.md
notes/docs/zanzibar/: check.md
notes/errors_handling_in_rust/: 1_basic_vanilla_rust.md  2_advanced_error_handling.md  4_snafu_in_depth.md
proto/: Cargo.toml  criterion.toml
proto/bench/: serialization_benchmark.rs
proto/proto/: bpe.proto  commit.proto  commit_author.proto  token_enum.proto
proto/proto/api/: common.proto  config.yaml  errors.proto  server.proto  system_health.proto
proto/src/: lib.rs
proto/src/core/adapter/: mod.rs
services/auth/: Cargo.toml  build.rs
services/auth/proto/v1/: auth.proto
services/auth/src/: errors.rs  lib.rs
services/auth/src/account/: database.rs
services/auth/src/models/: claims.rs  config.rs  keys.rs  mod.rs
services/auth/src/services/: auth_service.rs  grpc_service.rs  jwts_service.rs  mod.rs  pass_service.rs
services/database/: Cargo.toml  build.rs
services/database/migrations/: 20240731104558_init.down.sql  20240731104558_init.up.sql
services/database/proto/: config.yaml
services/database/proto/v1/: auth.proto  filter.proto
services/database/src/: lib.rs
services/database/src/adapters/: postgres.rs
services/database/src/services/: error.rs
services/database/tests/account_tests/: insert_test.bats
services/database/tests/refresh_token_tests/: select_test.bats
services/rustproof/: Cargo.toml  README.md  build.rs
services/rustproof/config/: default.toml
services/rustproof/examples/basic/: README.md  config.toml
services/rustproof/i18n/: mailer.toml  mailer.yaml
services/rustproof/migrations/postgres/: 001_initial_setup.sql
services/rustproof/src/: errors.rs  helper.rs  lib.rs  migration.rs  ssmig.rs
services/rustproof/src/adapter/: mod.rs
services/rustproof/src/config/: auth.rs  env.rs  fallback.rs  mailer.rs  mod.rs  oauth2.rs  observability.rs  smtp.rs  token.rs  tracing.rs
services/rustproof/src/controllers/: health.rs  mod.rs  signup.rs
services/rustproof/src/email/: mailer.rs  mod.rs
services/rustproof/src/middleware/: mod.rs  require_role.rs
services/rustproof/src/models/: auth.rs  claims.rs  config.rs  configuration.rs  keys.rs  mod.rs  oauth2.rs  records.rs
services/rustproof/src/repositories/: fido_repository.rs  identity_repository.rs  mod.rs  user_repository.rs
services/rustproof/src/services/: -old.rs  auth_service.rs  email_service.rs  grpc_service.rs  hibp_service.rs  jwts_service.rs  mailer_service.rs  mod.rs  oauth_service.rs  password_service.rs  session_service.rs
services/rustproof/tests/: mod.rs  test_jwts_service.rs
util/proto/: Cargo.toml
util/proto/src/: builder.rs  config.rs  lib.rs  models.rs
util/route/: Cargo.toml
util/route/src/: lib.rs
(+427 files in other folders)
