[workspace]
members = [
    "core",
    "api",
    "tests",
    "notes",
    #    "auth",
    "proto"
    , "route",
    "external"
]

exclude = [
    "integrations/github"
]

resolver = "2"

[workspace.dependencies]
devpulse_core = { path = "core" }
devpulse = { path = "api" }
proto = { path = "proto" }
auto-route = { path = "route" }

[workspace.package]
version = "0.1.0"
