[package]
name = "devpulse"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = """
DevPulse API is a comprehensive tool designed to analyze developer performance and repository contributions. It provides endpoints to assess code churn, identify top contributors, and evaluate individual developer metrics across various repositories. The API supports multiple protocols including HTTP, gRPC, and WebSocket, ensuring flexibility and scalability for diverse integration needs. DevPulse aims to offer actionable insights into codebase health and developer efficiency, facilitating better project management and development practices.
"""
homepage = "https://devpulse.shuttleapp.rs"
repository = "https://github.com/geoffreygrrett/devpulse"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.28.2"
devpulse_core = { path = "../core" }
url = "2.5.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.120"
headers = "0.4.0"
utoipa = { version = "4", features = ["axum_extras", "yaml", "openapi_extensions"] }
thiserror = "1.0.63"
base64 = "0.22.1"
futures-util = "0.3.30"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "add-extension"] }
serde_yaml = "0.9.34" # provides YAML serialization and deserialization
serde-xml-rs = "0.6.0"  # provides XML serialization and deserialization
axum-xml-up = "0.2.0"
axum-yaml = "0.4.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
tonic = "0.12.1"
prost = "0.13.1"
once_cell = "1.19.0"
lazy_static = "1.5.0"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
tower-service = "0.3.2"
pin-project-lite = "0.2.14"
tower_governor = { version = "0.4.2" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.12.1"
