[package]
name = "devpulse"
version = { workspace = true }
edition = "2021"
build = "build.rs"
description = """
DevPulse API is a comprehensive tool designed to analyze developer performance and repository contributions. It provides endpoints to assess code churn, identify top contributors, and evaluate individual developer metrics across various repositories. The API supports multiple protocols including HTTP, gRPC, and WebSocket, ensuring flexibility and scalability for diverse integration needs. DevPulse aims to offer actionable insights into codebase health and developer efficiency, facilitating better project management and development practices.
"""
homepage = "https://devpulse.shuttleapp.rs"
repository = "https://github.com/geoffreygrrett/devpulse"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
devpulse_core = { workspace = true }
url = "2.5.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.120"
headers = "0.4.0"
thiserror = "1.0.63"
base64 = "0.22.1"
futures-util = "0.3.30"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "add-extension", "fs"] }
serde_yaml = "0.9.34" # provides YAML serialization and deserialization
axum-xml-up = "0.2.0"
axum-yaml = "0.4.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
tonic = "0.12.1"
prost = "0.13.1"
once_cell = "1.19.0"
lazy_static = "1.5.0"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
tower-service = "0.3.2"
pin-project-lite = "0.2.14"
tower_governor = { version = "0.4.2" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
#axum_valid = "0.19.0"
axum-core = "0.4.3"
bytes = "1.6.1"
mime = "0.3.17"
serde-xml-rs = "0.6.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }
toml = "0.8.15"
snafu = "0.8.4"
async-trait = "0.1.81"

# helper
auto-route = { path = "../route", workspace = true }
axum-typed-routing = "0.2.1"
prost-build = "0.13.1"

[build-dependencies]
tonic-build = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
default = []
server = []
client = []
transport = []
use_builder = ["derive_builder"]
#documentation = ["utoipa"]
documentation = []

[dependencies.derive_builder]
package = "derive_builder"
version = "0.20.0"
optional = true

[dependencies.utoipa]
version = "4"
features = ["axum_extras", "yaml", "openapi_extensions"]
