[package]
name = "auth"
edition = "2021"
version.workspace = true
authors = ["Geoffrey Garrett <g.h.garrett13@gmail.com>"]

[dependencies]
prost = "0.13.1"
prost-types = "0.13.1"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8"
nject = "0.4"
uuid = "1.0"
bcrypt = "0.15.1"
config = "0.14.0"
proto = { path = "../proto", workspace = true }
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }