[package]
name = "auth"
edition = "2021"
version.workspace = true
authors = ["Geoffrey Garrett"]

[features]
default = [
    "auth-server",
    "grpc-server",
    "grpc-client",
    "http-server",
    "http-client"
]
auth-server = [
    "jsonwebtoken/default",
    "nject",
    "bcrypt",
    "snafu",
    "envy"
]
grpc-server = ["prost-types", "prost"]
grpc-client = ["prost-types", "prost"]
http-server = []
http-client = []

[dependencies]
prost = { version = "0.13.1", optional = true }
prost-types = { version = "0.13.1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8"
nject = { version = "0.4", optional = true }
uuid = "1.0"
bcrypt = { version = "0.15.1", optional = true }
config = "0.14.0"
dotenv = "0.15.0"
snafu = { version = "0.8.1", optional = true }
async-trait = "0.1.81"
expunge = { version = "0.3.4", features = ["zeroize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
envy = { version = "0.4.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }