[package]
name = "devpulse_core"
version = { workspace = true }
edition = "2021"
build = "build.rs"

[features]
default = ["use_builder"]
use_builder = ["derive_builder"]

[dependencies]
git2 = "0.19.0"
url = "2.5.2"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
async-trait = "0.1.81"
tokio = { version = "1.38.1", features = ["full"] }
chrono = "0.4.38"
thiserror = "1.0.63"
snafu = "0.8.4"
handlebars = "6.0.0"
derive_builder = { path = "..", optional = true, workspace = true }
cached = "0.53.1"
reqwest = { version = "0.12.5", features = ["json"] }
log = "0.4.22"
nject = "0.4.3"

# auth
bcrypt = "0.15.1"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.3.0"

# client
failsafe = { version = "1.3.0", features = ["futures-support"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
expunge = "0.3.4"
devpulse_externals = { path = "../externals" }
once_cell = "1.19.0"
tonic = "0.12.1"
prost = { path = "..", workspace = true }
prost-types = { path = "..", workspace = true }

[build-dependencies]
openapiv3 = "2.0.0"
serde_json = "1.0"
syn = "2.0.72"
prettyplease = "0.2.20"
#progenitor = { git = "https://github.com/geoffreygarrett/progenitor", branch = "feat/multi-response" }
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4", features = ["axum_extras", "yaml", "openapi_extensions"] }
tonic-build = { path = "..", workspace = true }
prost-build = { path = "..", workspace = true }
serde = { path = "..", workspace = true }
