[package]
name = "auth"
edition = "2021"
version.workspace = true
authors = ["Geoffrey Garrett"]
build = "build.rs"

[features]
default = [
    "auth-server",
    "grpc-server",
    "grpc-client",
    "http-server",
    "http-client",
    "async-trait",
]
auth-server = [
    "jsonwebtoken/default", # JWT
    "nject", # Dependency injection
    "bcrypt", # Password hashing
    "snafu", # Elegant error handling
    "zxcvbn", # Password strength checker
]
grpc-server = ["grpc-base"]
grpc-client = ["grpc-base"]
http-server = []
http-client = []
grpc-base = [
    "prost-types", # Protobuf
    "prost" # Protobuf
]

[dependencies]
prost = { version = "0.13.1", optional = true }
prost-types = { version = "0.13.1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8"
nject = { version = "0.4", optional = true }
uuid = "1.0"
bcrypt = { version = "0.15.1", optional = true }
config = "0.14.0"
dotenv = "0.15.0"
snafu = { version = "0.8.1", optional = true }
async-trait = { version = "0.1.81", optional = true }
expunge = { version = "0.3.4", features = ["zeroize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
#envy = { version = "0.4.2", optional = true }
zxcvbn = { version = "3.1.0", optional = true }
util-proto = { path = "..", workspace = true }
tonic = "0.12.1"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
tonic-build = "0.12.1"
util-proto = { path = "..", workspace = true, features = ["build"] }
