[package]
name = "devpulse-db"
edition = "2021"
version.workspace = true

[[bin]]
name = "database"
path = "src/bin/database.rs"
required-features = ["server"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
tonic = { version = "0.12.1", features = ["tls", "transport"], optional = true }
dotenv = { version = "0.15", optional = true }
partially = "0.2.1"
prost = "0.13.1"
async-trait = { version = "0.1.81", optional = true }
derive_builder = { version = "0.20.0", optional = true }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"], optional = true }
anyhow = "1.0.29"
tonic-reflection = "0.12.1"
uuid = { version = "1.10.0" ,features = ["v4"] }
prost-types = { version = "0.13.1", optional = true }
chrono = "0.4.38"
thiserror = "1.0.63"
derive_more = { version = "1.0.0-beta.6",features = ["full"] }
db-macros = { path = "macros", optional = true }

#, default-features = false
[build-dependencies]
util-proto = { path = "../util/proto", workspace = true, features = ["build"] }

[features]
default = ["derive_builder", "postgres", "proto-timestamp"]
proto-timestamp = ["prost-types", "sqlx/chrono"]
client = []
server = ["tonic", "tokio", "dotenv", "async-trait", "db-macros"]
postgres = ["sqlx", "server"]
use_builder = ["derive_builder"]


