[package]
name = "auto-route"
edition = "2021"
version.workspace = true

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.86"
utoipa = { version = "4", features = ["axum_extras", "yaml", "openapi_extensions"] }
axum-typed-routing = "0.2.1"
deluxe = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
darling = "0.20.10"

[lib]
proc-macro = true